[package]
name = "pallet-gallery"
description = "Art Gallery module that implements `Art Gallery` trait."
license = "Apache-2.0"
version = "0.4.0-dev"
authors = ["Usetech"]
edition = "2018"

[dependencies]
serde = { version = "1.0.123", optional = true }
codec = { package = "parity-scale-codec", version = "2.0.0", default-features = false }
sp-std = { version = "3.0.0", default-features = false }
sp-runtime = { version = "3.0.0", default-features = false }
sp-core = { version = "3.0.0", default-features = false }
sp-io = { version = "3.0.0", default-features = false }

frame-benchmarking = { version = "3.0.0", default-features = false, optional = true }
frame-support = { version = "3.0.0", default-features = false }
frame-system = { version = "3.0.0", default-features = false }
pallet-atomic-swap = { version = "3.0.0", default-features = false }
orml-traits = { version = "0.4.0", default-features = false }
orml-nft = { version = "0.4.0", default-features = false }

[dev-dependencies]
#clear_on_drop = { version = "0.2.4", features = ["no_cc"] }	# https://github.com/paritytech/substrate/issues/4179
pallet-balances = { version = "3.0.0" }

[features]
default = ["std"]
std = [
	"serde",
	"codec/std",
	"sp-runtime/std",
	"sp-io/std",
	"sp-std/std",
	"frame-benchmarking/std",
	"frame-support/std",
	"frame-system/std",
	"pallet-atomic-swap/std",
	"orml-traits/std",
	"orml-nft/std",
]
runtime-benchmarks = ["frame-benchmarking"]
